--- a/Informacion de Adopciones.html
+++ b/Informacion de Adopciones.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a tabindex="2" href="index.html">Inicio</a></li>
                     <li><a tabindex="3" href="Nosotros.html">Nosotros</a></li>
-                    <li><a tabindex="4" href="Apadrinamiento.html">Apadrinamiento</a></li>
+                    <li><a tabindex="4" href="apadrinamiento.html">Apadrinamiento</a></li>
                     <li><a tabindex="5" href="Informacion de Adopciones.html">Información de Adopciones</a></li>
                     <li><a tabindex="6" href="Contacto.html">Contacto</a></li>
                     <li><a tabindex="7" href="">Accesibilidad</a></li>
