--- a/Nosotros.html
+++ b/Nosotros.html
@@ -26,7 +26,7 @@
                     <li><a tabindex="4" href="Apadrinamiento.html">Apadrinamiento</a></li>
                     <li><a tabindex="5" href="Informacion de Adopciones.html">Información de Adopciones</a></li>
                     <li><a tabindex="6" href="Contacto.html">Contacto</a></li>
-                    <li><a tabindex="7" href="Accesibilidad.html">Accesibilidad</a></li>
+                    <li><a tabindex="7" href="">Accesibilidad</a></li>
                 </ul>
             </div>
         </nav>
