--- a/Nosotros.html
+++ b/Nosotros.html
@@ -14,14 +14,14 @@
 <body>
     <section class="header">
         <nav>
-            <a tabindex="1" href="Index.html"><img alt="Logo Fundacion Voz Animal" src="Imagenes Nosotros/logo.png"></a>   
+            <a tabindex="1" href="index.html"><img alt="Logo Fundacion Voz Animal" src="Imagenes Nosotros/logo.png"></a>   
         </nav>
     </section>
     <section class="Links-menu">
         <nav>
             <div class="links-menu">
                 <ul>
-                    <li><a tabindex="2" href="Index.html">Inicio</a></li>
+                    <li><a tabindex="2" href="index.html">Inicio</a></li>
                     <li><a tabindex="3" href="Nosotros.html">Nosotros</a></li>
                     <li><a tabindex="4" href="Apadrinamiento.html">Apadrinamiento</a></li>
                     <li><a tabindex="5" href="Informacion de Adopciones.html">Información de Adopciones</a></li>
