--- a/Admin_Inicio.html
+++ b/Admin_Inicio.html
@@ -20,8 +20,8 @@
             <div class="tboxcol3">
                 <div class="contc">
                     <form action="">
-                        <input tabindex="3" type="text" placeholder="Ingresa tu Nombre" required>
-                        <input tabindex="4" type="email" placeholder="Ingresa tu correo electronico" required>
+                        <input tabindex="3" type="text" placeholder="Usuario" required>
+                        <input tabindex="4" type="text" placeholder="Contraseña" required>
                     </form>   
                 </div>
             </div>
