--- a/Nosotros.html
+++ b/Nosotros.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/dcf4b2b8a2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style Nosotros.css">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/fontawesome.min.css">
 </head>
 <body>
@@ -26,7 +28,6 @@
                     <li><a tabindex="4" href="Apadrinamiento.html">Apadrinamiento</a></li>
                     <li><a tabindex="5" href="Informacion de Adopciones.html">Información de Adopciones</a></li>
                     <li><a tabindex="6" href="Contacto.html">Contacto</a></li>
-                    <li><a tabindex="7" href="">Accesibilidad</a></li>
                 </ul>
             </div>
         </nav>
@@ -71,14 +72,30 @@
             <div class="course-col2">
                 <p tabindex="15" class="InicioNosotros">Documentos Importantes</p>
             </div>
-            <div class="course-col2">
-                <p tabindex="16" class="InicioNosotros"><a href="Nosotros.html">Inicio</a></p>
-            </div>
         </div>
     </section>
     
 
     <br>
+
+    <section class="footer">
+        <div class="fot">
+            <div class="fot1">
+                <div class="fott">
+                    <h2 tabindex="17">Horarorio de Atencion</h2>
+                    <h2 tabindex="18">Lunes - Domingo <br> 11am - 4pm</h2>
+                </div>
+            </div>
+            <div class="fot3">
+                <i tabindex="19" class="fa-brands fa-facebook fa-5x" alt="Facebook"></i>
+                <i tabindex="20" class="fa-brands fa-instagram fa-5x" alt="Instagram"></i>
+            </div>
+            <div class="fot2">
+                <img tabindex="21" src="img/g.png" alt="Mapa de fundacion animal">
+            </div>
+            
+        </div>
+    </section>
 
 </body>
 </html>
