--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundacion Voz Animal</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/inicio.css">
     <script src="https://kit.fontawesome.com/dcf4b2b8a2.js" crossorigin="anonymous"></script>
 </head>
@@ -25,7 +28,7 @@
                     <li><a tabindex="4" href="apadrinamiento.html">Apadrinamiento</a></li>
                     <li><a tabindex="5" href="Informacion de Adopciones.html">Información de Adopciones</a></li>
                     <li><a tabindex="6" href="Contacto.html">Contacto</a></li>
-                    <li><a tabindex="7" href="">Accesibilidad</a></li>
+
                 </ul>
             </div>
         </nav>
